Wed May 30 03:17:16 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * orbsvcs/tests/Event/Mcast/AddrServer/Client.cpp:

          Added missing "ace/OS_NS_strings.h" include and used
          ACE_OS::strcasecmp instead of raw strcasecmp call.

        * orbsvcs/tests/Event/Mcast/AddrServer/TestAddrServer.h:
        * orbsvcs/tests/Event/Mcast/AddrServer/TestAddrServer.cpp:

          Fixed fuzz error, ACE_THROW_SEPC is deprecated now.

Wed May 30 02:05:51 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/EC_MT_Mcast/AddrServer.h:
        * orbsvcs/tests/EC_MT_Mcast/AddrServer.cpp:
        * orbsvcs/tests/EC_MT_Mcast/MCast.cpp:

          Fixed yet another implementation of a simple address server.

Tue May 29 14:11:17 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/examples/RtEC/MCast/AddrServer.h:
        * orbsvcs/examples/RtEC/MCast/AddrServer.cpp:

          Added changes required by new interface.

        * orbsvcs/orbsvcs/Event/ECG_Adapters.h:
        * orbsvcs/orbsvcs/Event/ECG_Complex_Address_Server.h:
        * orbsvcs/orbsvcs/Event/ECG_Complex_Address_Server.cpp:
        * orbsvcs/orbsvcs/Event/ECG_Mcast_EH.cpp:
        * orbsvcs/orbsvcs/Event/ECG_Simple_Address_Server.h:
        * orbsvcs/orbsvcs/Event/ECG_Simple_Address_Server.cpp:
        * orbsvcs/orbsvcs/Event/ECG_UDP_Out_Endpoint.cpp:
        * orbsvcs/orbsvcs/Event/ECG_UDP_Receiver.h:
        * orbsvcs/orbsvcs/Event/ECG_UDP_Receiver.inl:
        * orbsvcs/orbsvcs/Event/ECG_UDP_Sender.cpp:
        * orbsvcs/orbsvcs/Event/EC_UDP_Admin.h:
        * orbsvcs/orbsvcs/Event/EC_UDP_Admin.cpp:

        * orbsvcs/orbsvcs/RtecUDPAdmin.idl:

          Support for IPv6 addresses used to federate event channels via
          multicast. The AddressServer interface is extended to support
          either IPv4 or IPv6 addresses, retaining backwards
          compatibility. The interface differs from the solution