@@ -12,6 +12,7 @@
 #include "ace/Barrier.h"
 #include "ace/Task.h"
 #include "ace/Auto_Ptr.h"
+#include "ace/OS_NS_strings.h"
 #include <fstream>
 
 class Barrier_i : public virtual POA_Barrier
@@ -58,21 +59,21 @@ int main (int argc, char* argv[])
 
     for (int i = 0; argv[i] != 0; i++)
       {
-        if (strcasecmp(argv[i], "-address") == 0)
+        if (ACE_OS::strcasecmp(argv[i], "-address") == 0)
           {
             if (argv[i+1] != 0)
               address = argv[++i];
             else
               ACE_ERROR_RETURN ((LM_ERROR, "Missing address\n"),0);
           }
-        else if (strcasecmp(argv[i], "-port") == 0)
+        else if (ACE_OS::strcasecmp(argv[i], "-port") == 0)
           {
             if (argv[i+1] != 0)
               port = ACE_OS::atoi(argv[++i]);
             else
               ACE_ERROR_RETURN ((LM_ERROR, "Missing port\n"),0);
           }
-        else if (strcasecmp(argv[i], "-nodes") == 0)
+        else if (ACE_OS::strcasecmp(argv[i], "-nodes") == 0)
           {
             if (argv[i+1] != 0)
               num_nodes = ACE_OS::atoi(argv[++i]);
